# kline

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  package.json  pnpm-lock.yaml  trae.md  tsconfig.json
.claude/: settings.json
.kline/: .env.example  kline.json5
.trae/: .ignore
.trae/rules/: git-commit.md  import-rule.md  node-next.md  programming-paradigms.md  use-pnpm.md  use-zod.md
akshare/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  akshare_mcp  pyproject.toml  requirements.txt  uv.toml
akshare/docs/: CACHE_IMPLEMENTATION_SUMMARY.md  CACHE_RATELIMIT_GUIDE.md  INSTALL_GUIDE.md  PROJECT_CHECKLIST.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md
akshare/examples/: example.py
akshare/scripts/: check_syntax.py  install.sh
akshare/src/: __main__.py  akshare_mcp.py  tool.py
akshare/src/core/: akshare_client.py  akshare_service.py  cache.py  errors.py  schemas.py  stock_quotes_service.py
akshare/tests/: test_akshare_client.py  test_akshare_service_cache.py  test_cache_rate_limit.py  test_cli.py  test_integration.py  test_mcp_server.py
docs/: uv.toml
docs/akshare/: ARCHITECTURE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MCP_COMPARISON.md  REFACTOR_SUMMARY.md
docs/browser/: SECURITY_GUIDE.md
docs/kline/: ARCHITECTURE_DESIGN.md  BROWSER_CONTROL.md  CAUSAL_CHAIN.md  MCP_RATE_LIMITING_GUIDE.md  PRODUCT_REQUIREMENT.md  VIBER_CODING.md
docs/openclaw/: ARCHITECTURE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  WEB_BROWSER.md  (+2 more)
python/: README.md  pyproject.toml
python/akshare_mcp_server/: __init__.py  __main__.py  app.py  server.py
python/akshare_mcp_server/core/: __init__.py  akshare_client.py  akshare_service.py  cache.py  errors.py  schemas.py  service_factory.py
scripts/: browser-start.sh  dev.sh
src/: index.ts
(+98 files in other folders)
