[project]
name = "kline-akshare-mcp"
version = "1.0.0"
description = "股市风向日历 - Akshare MCP 服务"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.12.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kline-akshare-mcp = "index:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
