[project]
name = "kline-akshare-mcp"
version = "1.0.0"
description = "股市风向日历 - Akshare MCP 服务"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "akshare>=1.12.0",
    "curl-cffi==0.13.0",
]

[project.optional-dependencies]
full = [
    "python-dotenv>=1.0.0",
    "cachetools>=5.0.0",
    "pyrate-limiter>=3.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[project.scripts]
akshare_mcp = "src.akshare_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
